# cortex

./: .gitignore  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-tauri-foundation/: PLAN-01.md  PLAN-02.md  PLAN-03.md  PLAN-04.md  PLAN-05.md
.planning/phases/02-document-pipeline-and-file-watching/: .continue-here.md
.planning/phases/04-frontend-integration-and-ux/: .continue-here.md  04-UAT.md
.planning/phases/06-knowledge-graph-and-native-integrations/: 06-01-PLAN.md  06-02-PLAN.md  06-03-PLAN.md  06-04-PLAN.md  06-06-PLAN.md
client/: App.tsx  global.css
client/components/layout/: AppShell.tsx  CommandPalette.tsx  Sidebar.tsx  TopBar.tsx
client/hooks/: useTauri.ts
client/lib/: mock-data.ts  stores.ts  tauri.ts  types.ts  utils.ts
client/pages/: DocumentPage.tsx  FavoritesPage.tsx  Index.tsx  OnboardingPage.tsx  Placeholder.tsx  RecentPage.tsx  SearchPage.tsx  SettingsPage.tsx  SpaceDetailPage.tsx  SpacesPage.tsx  TagsPage.tsx  WatchedPage.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: engine.rs  error.rs  lib.rs  state.rs  types.rs
src-tauri/src/commands/: analytics.rs  documents.rs  folders.rs  mod.rs  settings.rs  spaces.rs
src-tauri/src/graph/: mod.rs
src-tauri/src/intelligence/: analytics.rs  reranker.rs
src-tauri/src/pipeline/: entities.rs  indexer.rs  mod.rs  parser.rs
src-tauri/src/search/: filters.rs  query.rs
src-tauri/src/spaces/: manager.rs  mod.rs  naming.rs
src-tauri/src/watcher/: registry.rs  worker.rs
