[package]
name = "cortex"
version = "0.1.0"
description = "Cortex - Self-Organizing Document Intelligence"
authors = []
license = ""
repository = ""
default-run = "cortex"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "cortex_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "cortex"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
